# notification-service

./: .gitignore  README-vn.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_otp_records.py  0002_add_trust_tables.py  0003_add_email_notifications.py
app/: main.py
app/common/constants/: NotificationChannel.py  (+2 more)
app/config/: dependency.py  grpc.py  logging.py  scheduler.py
app/scheduler/: EmailRetryJob.py  NotificationCleanupJob.py
clients/trust/: __init__.py  _clients.py  _descriptors.binpb  _models.py
docs/en/: api.md  architecture.md  integration.md  otp-system.md  overview.md
docs/vn/: api.md  architecture.md  integration.md  otp-system.md  overview.md
notification_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
proto/: notification.proto
resources/: application.yml
scripts/: migrate.py  smoke_test.py
test/api/: test_grpc_error_interceptor.py  test_grpc_handler.py  test_grpc_mapper.py  test_peer_identity.py
test/application/: test_dto.py  test_email_delivery_service.py  test_notification_cleanup_service.py  test_ports.py  test_retry_policy.py  test_retry_send_service.py  test_usecases.py
test/common/: test_constants.py  test_exceptions.py  test_id_generator.py  test_normalizer.py  test_pii.py
test/domain/: test_email_address.py  test_email_notification.py  test_otp_record.py
test/infrastructure/: test_email_notification_mapper.py  test_otp_repository.py  test_smtp_adapter.py  test_template_adapter.py
test/integration/: conftest.py  test_notification_repository.py  test_trust_client.py
(+88 files in other folders)
