[project]
name = "notification-service"
version = "0.1.0"
description = "Notification Service — email/SMS notification infrastructure for Base Platform (Xime ecosystem)"
requires-python = ">=3.12"

# Xime Framework được cài từ local path:
#   pip install -e "D:\code\xime\xime framework"
#
# Sau đó cài các dependencies còn lại:
#   pip install -e .
dependencies = [
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
    "protobuf>=5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "aiosmtplib>=3.0",
    "jinja2>=3.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "cryptography>=42",
    "alembic>=1.13",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["app*", "clients*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["test"]
addopts = "--import-mode=importlib"
pythonpath = [".", "app"]
